data/collection/fixes/descriptions/scala/scala-5856
```scala
scala> class C { s"$this" }
<console>:7: error: not found: value this
       class C { s"$this" }
                    ^

scala> class C { val q = this; s"$q" }
defined class C
```
